--- a/app/index.jade
+++ b/app/index.jade
@@ -44,6 +44,11 @@ head
   
   script(src='bower_components/browserdetection/src/browser-detection.js')
   
+  // offline-js
+  script(src='bower_components/offline/offline.min.js')
+  link(rel="stylesheet" href="bower_components/offline/themes/offline-theme-default.css")
+  link(rel="stylesheet" href="bower_components/offline/themes/offline-language-english.css")
+  
   // angular-ladda doesn't play nicely with ui-bootstrap
   // script(src="bower_components/ladda/js/spin.js")
   // script(src="bower_components/ladda/js/ladda.js")
