--- a/app/partials/dashboard.jade
+++ b/app/partials/dashboard.jade
@@ -17,4 +17,8 @@
       p.form-control-static.bitcoin-address.mtl
         img(src="img/spinner.gif", ng-hide="status.didInitializeHD")  
         span(ng-show="status.didInitializeHD")
-          | {{ paymentRequestAddress }}  
+          | {{ paymentRequestAddress }} 
+  .mtl
+    canvas(id="doughnutChart" data="data" class="chart chart-doughnut" labels="labels")
+
+
