chart displays account balance after navigating from Transactions -> Home once logged in

--- a/app/partials/dashboard.jade
+++ b/app/partials/dashboard.jade
@@ -19,6 +19,6 @@
         span(ng-show="status.didInitializeHD")
           | {{ paymentRequestAddress }} 
   .mtl
-    canvas(id="doughnutChart" data="data" class="chart chart-doughnut" labels="labels")
+    canvas(id="doughnutChart" data="data" class="chart chart-doughnut" labels="labels" options = "options")
 
 
