--- a/assets/css/utilities/_borders.scss
+++ b/assets/css/utilities/_borders.scss
@@ -1,3 +1,4 @@
 .border-bottom { border-bottom: 1px solid $ccc; }
+.border-bottom-light { border-bottom: 1px solid $eee; }
 .border-right { border-right: 1px solid $eee; }
 .border-top { border-top: 1px solid $eee; }
