--- a/app/partials/login.jade
+++ b/app/partials/login.jade
@@ -74,7 +74,12 @@
         .em-300.flex-end.mbm Having some trouble?
           span.pointer.blue.mls(ng-click="toggleHelp()") View Options
       .flex-column(ng-show="status.needsHelp")
-        ul.pln
+        .flex-column.flex-center(ng-show="status.emailSent")
+          .level-complete.flex-center.flex-justify
+            i.ti-check.bright-green
+          h3.mtl.em-300(translate="EMAIL_CONFIRMATION_SENT")
+          p.em-300(translate="SENT_EMAIL_RECOVER")
+        ul.pln(ng-hide="status.emailSent")
           li.border-bottom-light.pvm.flex-between.flex-center
             .flex-column.flex-2.prm
               h5.blue.em-300(translate="LOST_WALLET_ID")
