--- a/app/partials/recover-funds.jade
+++ b/app/partials/recover-funds.jade
@@ -27,7 +27,7 @@
             span.help-block {{ errors.password }}
           .form-group(ng-class="{'has-error': errors.confirmation, 'has-success': success.confirmation}")
             label.em-500(translate="CONFIRM_PASSWORD")
-            input.form-control(type="password",ng-model="fields.confirmation",autofocus, ng-focus="errors.confirmation = null")
+            input.form-control(type="password",ng-model="fields.confirmation",autofocus, ng-focus="errors.confirmation = null" required)
             span.help-block 
               p {{ errors.confirmation }}
         div(ng-switch-when="2")
@@ -37,7 +37,7 @@
           span.help-block(translate="INVALID_RECOVERY" ng-show="")
         .flex-center.flex-end.mvl
           img(ng-show="working" src="img/spinner.gif")
-          button.button-primary(ng-switch-when="1" ng-click="nextStep()" ng-disabled="!recoveryForm.$valid" translate="CONTINUE")
+          button.button-primary(ng-switch-when="1" ng-click="nextStep()" ng-disabled="!recoveryForm.$valid || isValid" translate="CONTINUE")
           button.button-muted.mrm(ng-switch-when="2" ng-click="goBack()" translate="GO_BACK")
           button.button-success(ng-switch-when="2" ng-click="nextStep()" translate="RECOVER_FUNDS")
 
