chore(es6): Added support and converted AlertsCtrl and tests

--- a/app/index.jade
+++ b/app/index.jade
@@ -66,8 +66,9 @@ head
   script(src='build/js/app.js')
   script(src='build/js/translations.js')
   
+  script(src='build/js/es5.js')
+  
   script(src='build/js/controllers/account_form_ctrl.js')
-  script(src='build/js/controllers/alerts_ctrl.js')
   script(src='build/js/controllers/app_ctrl.js')
   script(src='build/js/controllers/claim_ctrl.js')
   script(src='build/js/controllers/claim_modal_ctrl.js')
